<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:orientation="vertical"
    android:paddingVertical="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/tv_gender"
            android:text="@string/gender_ph"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/colorText"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_active"
            android:text="@string/active_ph"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/colorText"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_rem"
            android:text="@string/cap_ph"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/colorText"
            android:gravity="center"/>
    </LinearLayout>

    <TableLayout
        android:id="@+id/tl_course_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="5dp"
        android:background="@drawable/white_bg">

        <TableRow>

            <TextView
                android:id="@+id/tv_crs_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/code_ph"
                android:textSize="@dimen/crs_item_lbl" />

            <TextView
                android:id="@+id/tv_item_crn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/crn_ph"
                android:textSize="@dimen/crs_item_lbl" />

            <TextView
                android:id="@+id/tv_crs_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/course_ph" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:srcCompat="@drawable/timeicon" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tv_crs_section"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/sect_ph"
                android:textSize="@dimen/crs_item_lbl" />

            <TextView
                android:id="@+id/tv_credit_hours"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/credit_hours_ph"
                android:textSize="@dimen/crs_item_lbl" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="@dimen/crs_item_icon_w"
                    android:layout_height="@dimen/crs_item_icon_h"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    app:srcCompat="@drawable/personicon" />

                <TextView
                    android:id="@+id/tv_crs_instructor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/instructor_ph" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_crs_datetime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="TIMEPH" />
        </TableRow>


    </TableLayout>

    <TableLayout
        android:id="@+id/tl_course_item_actions"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EFEFEF"
        android:padding="10dp">

        <TableRow
            android:id="@+id/tr_show_course"
            android:background="@drawable/white_bg"
            android:paddingVertical="10dp">
            <ImageView
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:src="@drawable/c_info"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tv_lbl_show_info"
                android:text="Show Course Information"
                android:layout_weight="5"
                />
        </TableRow>

        <TableRow
            android:id="@+id/tr_change_course"
            android:background="@drawable/white_bg"
            android:paddingVertical="10dp"
            android:layout_marginVertical="10dp">
            <ImageView
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:src="@drawable/c_edit"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tv_lbl_change_course"
                android:text="Change Course"
                android:layout_weight="5"
                />
        </TableRow>

    </TableLayout>

    <!--
    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Button
            android:id="@+id/btn_course_item_alt"
            android:layout_margin="@dimen/crs_item_btn_margin"
            android:layout_width="@dimen/crs_item_sq"
            android:layout_height="@dimen/crs_item_sq"
            android:layout_weight="1"
            android:background="@drawable/c_edit"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btn_course_item_info"
            android:layout_margin="@dimen/crs_item_btn_margin"
            android:layout_width="@dimen/crs_item_sq"
            android:layout_height="@dimen/crs_item_sq"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="@drawable/c_info"/>


    </LinearLayout>
    -->
</LinearLayout>